# sentinel_ebpf

./: .gitignore  .gitmodules  .token  CONTAINERS.md  LICENSE.txt  Makefile  README.md  ckpt_kitnet_200k.pkl  commands_overnight.log.pid  commands_overnight_12.pid  compare_replay_loda_17.log.pid  event_envelope_codec.py  events_pb2.py  events_pb2_grpc.py  legacy_event_jsonl.py  memstream_ablation_overnight.log.pid  memstream_percentile_99.log.pid  overnight.log.pid  profile.stats  pyproject.toml  pytest.ini  q  rules_config.py
.cursor/rules/: baseline.mdc  testing.mdc
.github/workflows/: publish-images.yml
agent/: Dockerfile  __init__.py  config.py  probe_runner.py  rules.py
artifacts/datasets/: events_05_03_26.jsonl
detector/: Dockerfile  README.md  __init__.py  config.py  features.py  meta.py  model.py  scoring.py  server.py
docs/: CONTAINERS.md  README_DETAILED.md  RULES_GUIDE.md  cool_papers.md  streaming_ad_network_notes.md
probe/: Dockerfile  bpf_build.py  config.py  events.py  flags.py  open_flags.py  probe.bpf.c  probe_runner.py  rules.py
project_plan/: ref.bib
project_plan_long/: MasterThesisProposalLong.tex
proto/: events.proto
scripts/: README.md  add_one_off_labels.py  analyze_dataset.py  check_watch_events.py  commands.txt  commands2.txt  commands_compare_replay_loda_17.txt  commands_memstream_loda_17_500k.txt  commands_memstream_percentile_99.txt  commands_sequence_mlp_lidds_01_04.txt  commands_sequence_mlp_lidds_03_04.txt  commands_sequence_mlp_lidds_31_03.txt  compare_replay_scores.py  convert_beth_to_evt1.py  decode_logs.py  deploy-probe.sh  evaluate_beth_replay.py  evaluate_replay.py  extract_events_subset.py  feature_attribution.py  flatten_legacy_event_jsonl.py  gen_proto.sh  generate-activity.sh  generate_synthetic_evt1_dataset.py  install-tools.sh  k3d-setup.sh  k3d-smoke.sh  memstream_diagnostic.py  model_diagnostic.py  offline_vs_online_percentile.py  performance_measurement.py  preflight-check.sh  profile_detector.py  replay_lidds.py  replay_lidds_rules.yaml  replay_logs.py  run-activity-generator.sh  run_all_overnight.sh  run_beth_overnight.sh  run_beth_train_test_eval.py  (+10 more)
sentinel_ebpf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_beth_event_types.py  test_building_blocks.py  test_config.py  test_convert_beth_to_evt1.py  test_copulatree.py  test_cuda.py  test_decode_logs.py  test_detector.py  test_events.py  test_features.py  test_filesink.py  test_flags.py  test_freq1d.py  test_gausscop.py  test_grimmer.py  test_indep_marginal.py  test_kitnet.py  test_knn.py  test_latentcluster.py  test_loda.py  test_loda_ema.py  test_memstream.py  test_models_optional.py  test_open_flags.py  test_pipeline_models.py  test_probe_host_metrics.py  test_probe_metrics_server.py  test_pysad_loda.py  test_replay_logs.py  test_rules.py  test_rules_config.py  test_rules_dsl.py  test_rules_filtered.py  test_scoring.py  test_sequence_checkpoint.py  test_speed.py  test_ui_capacity.py  test_zscore.py
ui/: Dockerfile  index.html  server.py
(+96 files in other folders)
