[project]
name = "sentinel-ebpf"
version = "0.1.0"
description = "Falco-like eBPF probe and detector"
requires-python = ">=3.9,<3.14"
dependencies = [
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "grpcio-health-checking==1.76.0",
  "protobuf>=4.21.0",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "requests>=2.31.0",
]
local = [
  "tqdm>=4.66.0",
]
# Detector (ML) only; probe image stays small by not installing these
# CPU-only torch keeps detector image small for k3d/CI; use detector-cuda extra for GPU if needed
detector = [
  "numpy>=1.24.0,<2.0.0",
  "river>=0.21.0",
  "torch>=2.2.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = ["events_pb2", "events_pb2_grpc"]
