[project]
name = "sentinel-ebpf"
version = "0.1.0"
description = "Falco-like eBPF probe and detector"
requires-python = ">=3.9,<3.14"
dependencies = [
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "grpcio-health-checking==1.76.0",
  "protobuf>=4.21.0",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "requests>=2.31.0",
]
local = [
  "tqdm>=4.66.0",
]
# Detector (ML) only; probe image stays small by not installing these
# Use detector for CPU-only environments and detector-cuda on GPU hosts.
detector = [
  "numpy>=1.24.0,<2.0.0",
  "river>=0.21.0",
  "torch>=2.2.0",
]
detector-cuda = [
  "numpy>=1.24.0,<2.0.0",
  "river>=0.21.0",
  "torch>=2.2.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "extra == 'detector'" },
  { index = "pytorch-cu128", marker = "extra != 'detector' and extra == 'detector-cuda'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = ["events_pb2", "events_pb2_grpc"]
